--- a/package.json
+++ b/package.json
@@ -2,10 +2,20 @@
   "name": "personalproject",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:4000",
   "dependencies": {
+    "axios": "^0.18.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "massive": "^5.7.5",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-scripts": "2.1.4"
+    "react-redux": "^6.0.0",
+    "react-scripts": "2.1.4",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
