--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.4",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-promise-middleware": "^6.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +35,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.8"
+  }
 }
