--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
+    "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "googleapis": "^37.2.0",
     "massive": "^5.7.5",
     "react": "^16.8.1",
     "react-bootstrap": "^1.0.0-beta.5",
