--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-session": "^1.15.6",
     "googleapis": "^37.2.0",
     "massive": "^5.7.5",
+    "nodemailer": "^5.1.1",
     "react": "^16.8.1",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.1",
